# quarky

./: .gitattributes  .gitignore  Artemis.toml  Cargo.toml  LICENSE.md  Makefile  README.md  deb-config.toml  deny.toml
.github/workflows/: CI.yaml
debian/: service
lib/nitter/: Cargo.toml
lib/nitter/src/: client.rs  lib.rs  model.rs
lib/nitter/src/model/: feed.rs
lib/reddit/: .gitignore  Cargo.toml
lib/reddit/src/: lib.rs  types.rs
lib/reddit/tests/: common.rs
lib/rss-client/: Cargo.toml
lib/rss-client/src/: lib.rs  model.rs
lib/twitter-scraper/: Cargo.toml
lib/twitter-scraper/src/: client.rs  lib.rs  model.rs
lib/twitter-scraper/src/model/: get_user_by_screen_name.rs  get_user_tweets.rs
src/: cli_options.rs  commands.rs  config.rs  logger.rs  main.rs
src/commands/: announce.rs  help.rs  invite.rs  join.rs  leave.rs  mod.rs  movie_quote.rs  moviequotes.memorable_quotes.txt  ping.rs  play.rs  random_tweet.rs  reddit.rs  schoology.rs  stop.rs  vaporwave.rs  zalgo.rs
src/commands/cornell_movie_quotes_corpus/: .gitignore  README.v1.0.txt  moviequotes.memorable_nonmemorable_pairs.txt
src/commands/cornell_movie_quotes_corpus/__MACOSX/: ._README.v1.0.txt
