[package]
name = "quarky"
version = "0.0.2"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
camino = { version = "1.1.6", features = [ "serde1" ] }
# clokwerk = "0.4.0"
clokwerk = { git = "https://github.com/mdsherry/clokwerk" }
chrono = { version = "0.4.37", default-features = false }
fern = { version = "0.6.2", features = [ "colored" ] }
http = "1.1.0"
indexmap = "2.2.6"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
reddit = { git = "https://github.com/adumbidiot/reddit-rs", default-features = false, features = [ "rustls-tls" ] }
rss-client = { path = "lib/rss-client", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.117"
serenity = "0.12.1"
songbird = "0.4.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "signal" ] }
toml = "0.8.12"
zalgo = { git = "https://github.com/adumbidiot/zalgo-rs" }
poise = "0.6.1"

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
opt-level = 3
debug-assertions = false
strip = "symbols"

[patch.crates-io]

[workspace]
members = [
    "lib/*"
]

[package.metadata.deb]
name = "quarky"
depends = ""
assets = [
    [ "target/release/quarky", "usr/bin/", "700" ],
    [ "deb-config.toml", "etc/quarky/config.toml", "600" ],
]
conf-files = [
    "etc/quarky/config.toml",
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = false
start = false

[package.metadata.rpi-deploy]
targets = [
    "aarch64-unknown-linux-gnu",
]
