[package]
name = "quarky"
version = "0.0.2"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.93"
argh = "0.1.12"
audiopus_sys = { version = "0.2.2", default-features = false }
camino = { version = "1.1.9", features = [ "serde1" ] }
# clokwerk = "0.4.0"
clokwerk = { git = "https://github.com/mdsherry/clokwerk" }
chrono = { version = "0.4.38", default-features = false }
fern = { version = "0.7.0", features = [ "colored" ] }
http = "1.1.0"
indexmap = "2.7.0"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
reddit = { git = "https://github.com/adumbidiot/reddit-rs", default-features = false, features = [ "rustls-tls" ] }
reqwest = { version = "0.12.12", default-features = false, features = [ "rustls-tls" ] }
rss-client = { path = "lib/rss-client", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.208", features = [ "derive" ] }
serde_json = "1.0.125"
serenity = "0.12.4"
songbird = "0.5.0"
thiserror = "1.0.63"
tokio = { version = "1.41.1", features = [ "rt-multi-thread", "signal" ] }
toml = "0.8.19"
zalgo = { git = "https://github.com/adumbidiot/zalgo-rs" }
poise = "0.6.1"

[features]
default = []
pkg-config = [
    "audiopus_sys/pkg-config",
]

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
opt-level = 3
debug-assertions = false
strip = "symbols"

[patch.crates-io]
audiopus_sys = { git = "https://github.com/adumbidiot/audiopus_sys", branch = "pkg-config" }

[workspace]
members = [
    "lib/*"
]

[package.metadata.deb]
name = "quarky"
depends = [ "libopus0", "yt-dlp" ]
assets = [
    [ "target/release/quarky", "usr/bin/", "700" ],
    [ "deb-config.toml", "etc/quarky/config.toml", "600" ],
]
conf-files = [
    "etc/quarky/config.toml",
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = false
start = false
