[package]
name = "quarky"
version = "0.0.2"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2021"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.12"
audiopus_sys = { version = "0.2.2", default-features = false }
camino = { version = "1.1.10", features = [ "serde1" ] }
# clokwerk = "0.4.0"
clokwerk = { git = "https://github.com/mdsherry/clokwerk" }
chrono = { version = "0.4.41", default-features = false }
fern = { version = "0.7.0", features = [ "colored" ] }
http = "1.1.0"
indexmap = "2.10.0"
lazy_static = "1.5.0"
log = "0.4.27"
nitter = { path = "lib/nitter", features = [ "rustls-tls" ], default-features = false}
rand = "0.9.2"
reddit = { git = "https://github.com/adumbidiot/reddit-rs", default-features = false, features = [ "rustls-tls" ] }
# This should match the version used by songbird.
# Serenity usually ships an older version,
# usually in conflict with songbird.
reqwest = { version = "0.12.22", default-features = false, features = [ "rustls-tls" ] }
rss-client = { path = "lib/rss-client", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.208", features = [ "derive" ] }
serde_json = "1.0.142"
serenity = "0.12.4"
songbird = "0.5.0"
thiserror = "2.0.11"
tokio = { version = "1.47.1", features = [ "rt-multi-thread", "signal" ] }
toml = "0.9.4"
zalgo = { git = "https://github.com/adumbidiot/zalgo-rs" }
poise = "0.6.1"

[features]
default = []
pkg-config = [
    "audiopus_sys/pkg-config",
]

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
opt-level = 3
debug-assertions = false
strip = "symbols"

[patch.crates-io]
audiopus_sys = { git = "https://github.com/adumbidiot/audiopus_sys", branch = "pkg-config" }

[workspace]
members = [
    "lib/*"
]

[package.metadata.deb]
name = "quarky"
depends = [ "libopus0", "yt-dlp" ]
assets = [
    [ "target/release/quarky", "usr/bin/", "700" ],
    [ "deb-config.toml", "etc/quarky/config.toml", "600" ],
]
conf-files = [
    "etc/quarky/config.toml",
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = false
start = false
