[package]
name = "nitter"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.24", features = [ "http2", "gzip" ], default-features = false }
scraper = { version = "0.24.0", default-features = false }
thiserror = "2.0.17"
tokio = "1.48.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
