[package]
name = "reddit"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"

[dependencies]
hyper = "0.13.6"
hyper-tls = "0.4.1"
serde = { version = "1.0.110", features = [ "derive" ] }
serde_json = "1.0.53"
bytes = "0.5.4"

[dev-dependencies]
tokio = { version = "0.2.21", features = [ "macros" ] }
