[package]
name = "reddit"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.5.4"
http = "0.2.1"
hyper = "0.13.6"
hyper-tls = "0.4.1"
serde = { version = "1.0.112", features = [ "derive" ] }
serde_json = "1.0.55"

[dev-dependencies]
tokio = { version = "0.2.21", features = [ "macros" ] }
