[package]
name = "rss-client"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
quick-xml = { version = "0.31.0", features = [ "serialize" ] }
reqwest = { version = "0.11.27", features = [], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [ "rt" ] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = [ "macros" ] }

[features]
default = [
    "rustls-tls",
]

native-tls = [
    "reqwest/native-tls",
]

rustls-tls = [
    "reqwest/rustls-tls",
]
