[package]
name = "rss-client"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
quick-xml = { version = "0.38.3", features = [ "serialize" ] }
reqwest = { version = "0.12.24", features = [], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "rt" ] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [
    "rustls-tls",
]

native-tls = [
    "reqwest/native-tls",
]

rustls-tls = [
    "reqwest/rustls-tls",
]
