[package]
name = "twitter-scraper"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cookie_store = "0.21.1"
form_urlencoded = "1.2.1"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [ "cookies", "json" ] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.208", features = [ "derive" ] }
serde_json = "1.0.125"
thiserror = "2.0.11"
tokio = "1.44.2"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.44.2", features = [ "macros" ] }

[features]
default = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
