[package]
name = "twitter-scraper"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cookie_store = "0.22.0"
form_urlencoded = "1.2.2"
once_cell = "1.21.3"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [ "cookies", "json" ] }
reqwest_cookie_store = "0.9.0"
serde = { version = "1.0.225", features = [ "derive" ] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = "1.47.1"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.47.1", features = [ "macros" ] }

[features]
default = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
